final website touches to static

--- a/static charts 2.ipynb
+++ b/static charts 2.ipynb
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "ef4d8e6e",
    "metadata": {},
    "outputs": [
@@ -1172,6 +1172,7 @@
     "plt.figure(figsize=(10, 8))\n",
     "sns.heatmap(correlation, annot=True, cmap='coolwarm')\n",
     "plt.title('Correlation Heatmap')\n",
+    "plt.savefig(f\"{output_dir}correlation_heatmap.png\", bbox_inches='tight') \n",
     "plt.show()"
    ]
   },
